--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@
 # OS or Editor folders
 .DS_Store
 Thumbs.db
-config.js
+# config.js
 api-keys.js
 .cache
 .project
@@ -44,8 +44,8 @@ cexio.db
 TMP_*
 .idea
 volumes
-#config.js
-config-*.js
+# config.js
+# config-*.js
 private-*.js
 private-*.toml
 SECRET-api-keys.json
